--- a/lab1/Client.ipynb
+++ b/lab1/Client.ipynb
@@ -11,39 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-10-26 12:49:07,227 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=57, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('127.0.0.1', 57931), raddr=('127.0.0.1', 50007)>\n"
+      "2024-04-16 15:48:19,531 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=70, family=2, type=1, proto=0, laddr=('127.0.0.1', 43964), raddr=('127.0.0.1', 50007)>\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-10-26 12:49:07,228 - vs2lab.a1_layers.clientserver.Client - INFO - Client down.\n"
+     "ename": "AttributeError",
+     "evalue": "'Client' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[72], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mclientserver\u001b[39;00m \u001b[38;5;66;03m# import from our script\u001b[39;00m\n\u001b[1;32m      3\u001b[0m client \u001b[38;5;241m=\u001b[39m clientserver\u001b[38;5;241m.\u001b[39mClient() \u001b[38;5;66;03m# Create a client instance\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m() \u001b[38;5;66;03m# start the call and print echo\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Client' object has no attribute 'get'"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world*\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Hello, world*'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -51,7 +38,7 @@
     "\n",
     "client = clientserver.Client() # Create a client instance\n",
     "\n",
-    "client.call() # start the call and print echo"
+    "client.get() # start the call and print echo"
    ]
   },
   {
@@ -78,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
