--- a/lab1/Client.ipynb
+++ b/lab1/Client.ipynb
@@ -11,26 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-16 15:48:19,531 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=70, family=2, type=1, proto=0, laddr=('127.0.0.1', 43964), raddr=('127.0.0.1', 50007)>\n"
+      "2024-04-16 16:50:52,473 - vs2lab.a1_layers.clientserver.Client - INFO - Client connected to socket <socket.socket fd=70, family=2, type=1, proto=0, laddr=('127.0.0.1', 45706), raddr=('127.0.0.1', 50007)>\n",
+      "2024-04-16 16:50:52,474 - vs2lab.a1_layers.clientserver.Client - INFO - Client sent GELL\n",
+      "2024-04-16 16:51:29,485 - vs2lab.a1_layers.clientserver.Client - INFO - Client received decoded: \n",
+      "2024-04-16 16:51:29,486 - vs2lab.a1_layers.clientserver.Client - INFO - Client down.\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'Client' object has no attribute 'get'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[72], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mclientserver\u001b[39;00m \u001b[38;5;66;03m# import from our script\u001b[39;00m\n\u001b[1;32m      3\u001b[0m client \u001b[38;5;241m=\u001b[39m clientserver\u001b[38;5;241m.\u001b[39mClient() \u001b[38;5;66;03m# Create a client instance\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m() \u001b[38;5;66;03m# start the call and print echo\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Client' object has no attribute 'get'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -38,7 +47,7 @@
     "\n",
     "client = clientserver.Client() # Create a client instance\n",
     "\n",
-    "client.get() # start the call and print echo"
+    "client.call() # start the call and print echo"
    ]
   },
   {
